--- a/AIevent/AIverse/static/css/payment.css
+++ b/AIevent/AIverse/static/css/payment.css
@@ -15,11 +15,11 @@ body{
 
 #QR{
     width: 250px;
-    
+
 }
 
 .main-div{
-    width: fit-content;
+    width: 26rem;
     /* margin-top: 4rem; */
     /* border: 1px solid black; */
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
