--- a/AIevent/AIverse/templates/event/events/beat_bots.html
+++ b/AIevent/AIverse/templates/event/events/beat_bots.html
@@ -57,7 +57,7 @@
 
                 <br><br>
 
-                Follow us on [Social Media Links] for event updates and sneak peeks into the world of AI-generated melodies.
+                Follow us on  <a href="https://instagram.com/aiverse_1.0?igshid=MzRlODBiNWFlZA==" target="_blank">beatbots</a> for event updates and sneak peeks into the world of AI-generated melodies.
                 Let the rhythm of technology inspire your creative soul at BeatBots! <br><br>
 
                 <h3>For inquiries and registrations, contact: </h3>
