--- a/AIevent/AIverse/templates/event/events/giga_gen.html
+++ b/AIevent/AIverse/templates/event/events/giga_gen.html
@@ -26,7 +26,7 @@
                 <h3>🎉St. Vincent Pallotti College of Engineering & Technology🎉 AIVerse 1.0
                     Presents</h3><br>
                 <h3>🤖GigaGen🤖</h3><br><br>
-                📅 Date: 15 sept 2023 <br><br>
+                📅 Date: 4 sept 2023 <br><br>
                 <h3>About The Event</h3>
                 Our event revolves around the exciting realm of AI-generated content. It offers participants a unique
                 platform to showcase their creativity and technical prowess. In the first round, participants will dive into
@@ -42,13 +42,11 @@
                 Timed Rounds: Each round has a specific time limit, with guidelines communicated during the event. <br><br>
 
                 <h3>Registration Charges :</h3>
-                Rs. 200/-, 150/-, 100/-,50/- For Squad, Trio, Duo,Solo respectively.<br>
+                Rs. 130/-, 100/- ,50/- For Squad,Duo,Solo respectively.<br>
                 💵 With invigorating Cash prizes!<br>
                 📄 With Certificate of participation <br><br>
                 🛠️Workshop for GigaGen 1.0(Generative AI)<br><br>
-                🎉Prizes:
-                1st Prize Rs.1000/- <br>
-                2nd Prize Rs. 500/- <br>
+                🎉Prizes worth Rs.2000/-
 
                 <strong>Don't miss out on this majestic opportunity to be a part of something colossal. Mark your
                     calendars.</strong>
