--- a/AIevent/AIverse/templates/event/events/opti_ml.html
+++ b/AIevent/AIverse/templates/event/events/opti_ml.html
@@ -52,7 +52,7 @@
 
                 🔥 Ignite your curiosity with Mind-Blowing AI Insights <br>
                 🎙️ Engage in Thought-Provoking Discussions <br>
-                🏆 Win Prizes that Spark Excitement <br><br>
+                🏆 Win Prizes Rs.2000/- that Spark Excitement <br><br>
 
                 <h3>Rules: </h3>
                 • Teams of Three: Pair up with a teammate or two to maximize creativity and collaboration. Two heads are better than
