--- a/AIevent/AIverse/templates/event/events/startup_mela.html
+++ b/AIevent/AIverse/templates/event/events/startup_mela.html
@@ -27,7 +27,7 @@
                 <strong>🚀 Venture Vista.AI 🚀</strong> <br><br>
                 We propose to organize an innovative event titled "Venture Vista.AI" under the banner of Artificial Intelligence Department. This event aims to foster entrepreneurship, promote AI integration, and encourage creative thinking among our student community. The event will serve as a platform for budding startups to demonstrate their unique ideas, emphasizing AI technology utilization.<br><br>
 
-                📅 Date: 15th September 2023 <br>
+                📅 Date: 4th September 2023 <br>
                 🏢 Venue: <br><br>
                 <h3 style="text-decoration:underline">Event Objectives</h3>
                 1. Provide a platform for startups to showcase their innovative business ideas.<br>
@@ -51,12 +51,12 @@
                 🌟 Technology-Driven Tech Exploration <br>
                 💡 SaaS Revolution in Business <br><br>
 
-                Win prizes worth up to 🎊 <br><br>
+                Win prizes worth up to Rs.2000/-🎊 <br><br>
 
                 Don't miss this chance to ignite your startup with AI power! 🔴 <br><br>
 
                 For inquiries and registrations, contact: <br>
-                <span>📞 Shantnu: <a href="tel: 9604650588" style="color:white;">9604650588</a></span>
+                <span>📞 Shantnu Fartode: <a href="tel: 9604650588" style="color:white;">9604650588</a></span>
                 <span>📞 Ashwin: <a href="tel:  7034839540 " style="color:white;"> 7034839540 </a></span>
             </p>
 
