--- a/AIevent/AIverse/templates/event/reg.html
+++ b/AIevent/AIverse/templates/event/reg.html
@@ -204,9 +204,8 @@
                 payButton.disabled = false;
 
             } else if (teamValue === "3") {
-               amount = 130;
-               payButton.disabled = false;
-
+                payButton.disabled = true;
+                alert("Team size should allow 1,2 or 4. Please select accordingly");
 
             } else if (teamValue === "4") {
                amount = 130;
