--- a/AIevent/AIverse/templates/event/payment.html
+++ b/AIevent/AIverse/templates/event/payment.html
@@ -13,11 +13,22 @@
         rel="stylesheet">
     <title>AIVerse 1.0 | Payment Submission</title>
     <link rel="icon" type="images/x-icon" href="{% static 'Static_images\AIverse_logo.png' %}" />
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script>
         function enableSubmit() {
             const uploadInput = document.getElementById('screenshot');
             const submitButton = document.getElementById('submitBtn');
+            submitButton.addEventListener("click", function() {
+            // Check the current text of the button
+            if (submitButton.innerText === "submit") {
+             // Change the text to something else
+            submitButton.innerText = "submit";
+            } else {
+            // Change it back to the original text
+            submitButton.innerText = "submitting....";
+            }
+        });
 
             if (uploadInput.files.length > 0) {
                 submitButton.disabled = false;
@@ -36,14 +47,14 @@
 <body>
     <div class="main-div">
 
-            <p>Name: {{name}}</p>
-            <p>Contact: {{number}}</p>
-            <p>Branch: {{branch}}</p>
-            <p>Year: {{year}}</p>
-            <p>Email: {{email}}</p>
-            <p>Team: {{team_size}}</p>
-            <p>Event: {{event}}</p>
-            <p>Amount: {{amount}}</p>
+            <p><strong>Name:</strong> {{name}}</p>
+            <p><strong>Contact:</strong> {{number}}</p>
+            <p><strong>Branch:</strong> {{branch}}</p>
+            <p><strong>Year:</strong> {{year}}</p>
+            <p><strong>Email:</strong> {{email}}</p>
+            <p><strong>Team:</strong> {{team_size}}</p>
+            <p><strong>Event:</strong> {{event}}</p>
+            <p><strong>Amount:</strong> {{amount}}</p>
 
         <!-- Your form and other content here -->
         <form action="/payment/" method="post" enctype="multipart/form-data" class="payment-form">{% csrf_token %}
@@ -70,6 +81,10 @@
             <input type="text" id="transaction-id" name="transaction-id" placeholder="Transaction-id"><br> <br>
             <button type="submit" id="submitBtn" disabled>Submit</button>
         </form>
+        <div class="alert alert-warning alert-dismissible fade show col-md-13" role="alert">
+  <strong>Note!</strong> After clicked on submit please  wait for a minute , registration will be successful after the Home page occurs,
+            <strong>please check the email</strong>
+</div>
     </div>
 
     <!--    <script>-->
